demo/istiofilter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "istiofilter"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: "istiofilter"
  template:
    metadata:
      labels:
        app: "istiofilter"
    spec:
      serviceAccountName: istiofilter
      volumes:
        - name: cert
          secret:
            secretName: "istiofilter-certs"
      containers:
        - name: "istiofilter"
          image: istioconductor/istiofilter:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /root/cert
              name: cert
          args:
            - --privilegeNamespaces=istio-system
            - --port=443
            - --keyFile=/root/cert/key.pem
            - --certFile=/root/cert/cert.pem
            - --logLevel=debug
---
apiVersion: v1
kind: Service
metadata:
  namespace: istio-system
  name: istiofilter
spec:
  selector:
    app: "istiofilter"
  ports:
    - port: 443
      targetPort: 443
      name: https
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istiofilter-webhook
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVGakNDQXY2Z0F3SUJBZ0lVUDhBTDl4ODdJbzFjTHB2N1IvSWpmaHZ2dDlzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZUXhDekFKQmdOVkJBWVRBa05PTVJBd0RnWURWUVFJREFkQ1pXbHFhVzVuTVJBd0RnWURWUVFIREFkQwpaV2xxYVc1bk1Sd3dHZ1lEVlFRS0RCTnBjM1JwYnkxamIyNWtkV04wYjNJdWIzSm5NUXd3Q2dZRFZRUUxEQU5QCmNtY3hKVEFqQmdOVkJBTU1IR2x6ZEdsdlptbHNkR1Z5TG1semRHbHZMWE41YzNSbGJTNXpkbU13SUJjTk1qRXcKTWpBM01EZ3lOalV4V2hnUE1qRXlNVEF4TVRRd09ESTJOVEZhTUlHRU1Rc3dDUVlEVlFRR0V3SkRUakVRTUE0RwpBMVVFQ0F3SFFt [...]
      service:
        name: istiofilter
        namespace: istio-system
        path: /mutate
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: istiofilter.istio-system.svc.cluster.local
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - "networking.istio.io"
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - virtualservices
          - destinationrules
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
